--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -21,12 +21,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.9"
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
         pip install sphinx pydata-sphinx-theme
+        pip install .
 
     - name: Build documentation
       run: sphinx-build -b html docs/source/ public/
